slight css fixes for dark mode
fixes #4865

--- a/redaxo/src/addons/be_style/plugins/redaxo/scss/_dropdowns.scss
+++ b/redaxo/src/addons/be_style/plugins/redaxo/scss/_dropdowns.scss
@@ -98,6 +98,10 @@
             background-color: $color-grey-5;
         }
     }
+
+    .bootstrap-select .no-results {
+        background-color: transparent;
+    }
 }
 
 body.rex-theme-dark {
